# screenshooter

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  screenshooter.spec
screenshooter/: main.py  win_border.py
screenshooter/capture/: capturer.py
screenshooter/hotkey/: hotkey_manager.py  vk_codes.py
screenshooter/locale/: __init__.py
screenshooter/overlay/: active_window_strategy.py  border_flash.py  drag_resize_strategy.py  follow_cursor_strategy.py  frame_window.py  fullscreen_strategy.py  position_strategy.py  resize_handle.py  selection_strategy.py
screenshooter/settings/: config.py  storage.py
screenshooter/ui/: about_popup.py  format_wheel.py  key_capture_dialog.py  main_wheel.py  mode_wheel.py  settings_wheel.py  steering_wheel.py
